--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "helmet": "^3.15.1",
     "lodash": "^4.17.11",
     "morgan": "^1.9.1"
   },
